# dis_tutorial5

./: .gitignore  CMakeLists.txt  README.md  TASK1.md  about.md  people_detections.json  ring_detections.json
config/: nav2.yaml
launch/: localization.launch.py  nav2.launch.py  robot_walk_and_conversation.launch.py  sim.launch.py  sim_turtlebot_nav.launch.py  sim_turtlebot_slam.launch.py  slam.launch.py  turtlebot4_spawn.launch.py
scripts/: LLM.py  autonomous_sweep.py  detect_people2.py  detect_rings.py  determine_search_points.py  halfautonomous_search.py  map_geofence_tool.py  map_goals.py  robot_commander.py  voice_capture.py
urdf/sensors/: oakd.urdf.xacro
